Business_Advertiser__19_10_2019 second

--- a/Business_Advertiser/index.html
+++ b/Business_Advertiser/index.html
@@ -62,41 +62,48 @@
         </label>
 
         <div class="center-circle" id="circle-1">
+            <span class="line" id="line-1"></span>
             <h2>Business Intelligence</h2>
             <p>
                 adipisicing elit. Corporis illo error maxime dicta nam totam amet, asperiores animi saepe a.
             </p>
         </div>
         <div class="center-circle" id="circle-2">
+            <span class="line" id="line-2"></span>
             <h2>BlcokChain Revolution</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab molestias odio eaque.
             </p>
         </div>
         <div class="center-circle" id="circle-3">
+            <span class="line" id="line-3"></span>
             <h2>Socila Network Analysis</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, veniam!
             </p>
         </div>
         <div class="center-circle" id="circle-4">
+            <span class="line" id="line-4"></span>
             <h2>Trust and Reputation</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Non consequuntur temporibus, in cumque distinctio recusandae?
             </p>
         </div>
         <div class="center-circle" id="circle-5">
+            <span class="line" id="line-5"></span>
             <h2>Fraud Detection</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor hic nostrum molestiae aut?
             </p>
         </div>
         <div class="center-circle" id="circle-6">
+            <span class="line" id="line-6"></span>
             <h2>Data Science</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
         </div>
         <div class="center-circle" id="circle-7">
+            <span class="line" id="line-7"></span>
             <h2>Web Development</h2>
             <p>
                 odit corrupti eos neque enim voluptatum quam nesciunt impedit inventore cumque.
